# openlibrary-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  claude_desktop_config.json  pyproject.toml  requirements.txt
books_mcp/: fastapi_server.py  mcp_server.py  models.py  providers.py
openlibrary_mcp/: fastapi_server.py  mcp_server.py  providers.py
